# PortProtonQt

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  app.py  get_id.py  pyproject.toml  requirements.txt  setup.py
.gitea/workflows/: build.yml  check-spell.yml  code-check.yml  generate-appid.yml
.github/: dependabot.yml
.github/workflows/: build-nightlly.yml  build.yml  check-spell.yml  code-check.yml  generate-appid.yml  install-check.yml  uv-lock.yml
build-aux/: AppImageBuilder.yml  PKGBUILD  PKGBUILD-git  altlinux.spec  deb_builld.sh  fedora-git.spec  fedora.spec
build-aux/share/applications/: ru.linux_gaming.PortProtonQt.desktop
data/: anticheat_games.json  anticheat_games.tar.xz  games_appid.tar.xz
dev-scripts/: .spellignore  bump_ver.py  check_qss_properties.py  check_spell.py  get_id.py  l10n.py  steam.py
documentation/localization_guide/: README.md  README.ru.md
documentation/metadata_override/: README.md  README.ru.md
documentation/theme_guide/: README..md  README.ru.md
portprotonqt/: app.py  config_utils.py  context_menu_manager.py  custom_widgets.py  custom_wigets.py  dialogs.py  downloader.py  egs_api.py  flow_layout.py  game_card.py  gamepad_support.py  image_utils.py  input_manager.py  localization.py  logger.py  main_window.py  steam_api.py  styles.py  theme_manager.py  time_utils.py  tray.py  virtual_keyboard.py
portprotonqt/custom_data/: README.md
portprotonqt/locales/: README.md  messages.pot
portprotonqt/locales/de_DE/LC_MESSAGES/: messages.mo  messages.po
portprotonqt/locales/es_ES/LC_MESSAGES/: messages.mo  messages.po
portprotonqt/locales/ru_RU/LC_MESSAGES/: messages.mo  messages.po
portprotonqt/themes/: README.md
portprotonqt/themes/BlackSnaker/: styles.py
portprotonqt/themes/clean_dark/: metainfo.ini  styles.py
portprotonqt/themes/standart/: metainfo.ini  styles.py
portprotonqt/themes/standart-light/: metainfo.ini  styles.py
portprotonqt/themes/standart_light/: metainfo.ini  styles.py
portprotonqt/themes/standart_lite/: styles.py
portprotonqt/themes/standart_lite_light/: metainfo.ini  styles.py
