[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "portprotonqt"
version = "0.1.0"
description = "A project to rewrite PortProton (PortWINE) using PySide"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Boria138" },
  { name = "BlackSnaker" },
  { name = "Mikhail Tergoev(Castro-Fidel)" }
]
keywords = ["portproton", "wine", "game", "steam"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Linux"
]
requires-python = ">=3.10"
dependencies = [
    "babel>=2.17.0",
    "numpy>=2.2.4",
    "orjson>=3.10.16",
    "psutil>=7.0.0",
    "pygame>=2.6.1",
    "pyside6>=6.9.0",
    "vdf>=3.4",
]

[project.scripts]
portprotonqt = "portprotonqt.app:main"

[tool.setuptools.package-data]
"portprotonqt" = ["themes/**/*", "locales/**/*", "custom_data/**/*"]

[tool.setuptools.packages.find]
exclude = ["data", "dev-scripts"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
    "E501"   # Line too long
]

[tool.ruff.lint.isort]
known-third-party = ["portprotonqt"]

[tool.ruff]
exclude = [
  ".eggs",
  ".git",
  "build",
  "dist",
  "portprotonqt.egg-info",
  ".venv",
  "venv",
  "dev-scripts",
  "portprotonqt/themes",
  ".vscode",
]
target-version = "py310"

[tool.pyright]
pythonVersion = "3.10"
pythonPlatform = "Linux"
ignore = [
    "portprotonqt/gamepad_support.py", # I need gamepad for test
    ".eggs",
    ".git",
    "build",
    "dist",
    "portprotonqt.egg-info",
    ".venv",
    "venv",
    "dev-scripts",
    "portprotonqt/themes",
    ".vscode",
]

[dependency-groups]
dev = [
    "mdformat>=0.7.22",
    "pre-commit>=4.2.0",
    "pyright>=1.1.400",
]
